Dont use CompactObjectHeaders